# ia_codigoaberto

./: index.qmd  pyproject.toml  readme.MD  slides.qmd
docs/: index.html  readme.html  search.json  slides.html
docs/notebooks/: zero_shot.html
docs/site_libs/bootstrap/: bootstrap-f6760de41613ede75ef654e8b14c7ab6.min.css
notebooks/: 0_visualiza_embeddings.ipynb  2_llm_api.ipynb  3_llm_local.ipynb  llm_api.html  llm_local.html  zero_shot.ipynb
