[project]
name = "abraji"
version = "0.1.0"
description = ""
authors = [
    {name = "Adriano Belisario"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "setfit (>=1.1.2,<2.0.0)",
    "llm (>=0.26,<0.27)",
    "llm-mistral (>=0.14,<0.15)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "llm-ollama (>=0.11,<0.12)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "numpy (>=1.24.0,<1.27.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
